metadata/force-app/main/default/objects/CustomName_ULCqW__c/CustomName_ULCqW__c.object-meta.xml
<CustomObject>
    <description>Description_mLymt</description>
    <label>CustomLabel_diFMR</label>
    <nameField>
        <label>CustomLabel_diFMR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_diFMRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>