metadata/force-app/main/default/objects/CustomName_ULCqW__c/fields/CustomField_HnubL__c.field-meta.xml
<CustomField>
    <fullName>CustomField_HnubL__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgItOx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>