metadata/force-app/main/default/objects/CustomName_ULCqW__c/fields/CustomField_LmnPI__c.field-meta.xml
<CustomField>
    <fullName>CustomField_LmnPI__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvWASg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>